--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+crispy-bootstrap5==2024.2
+cryptography==42.0.5
+defusedxml==0.7.1
 Django==5.0.2
+django-allauth==0.61.1
+django-cleanup==8.1.0
+django-crispy-forms==2.1
 idna==3.6
+oauthlib==3.2.2
+pillow==10.2.0
+pycparser==2.21
+PyJWT==2.8.0
+python-dotenv==1.0.1
+python3-openid==3.2.0
 requests==2.31.0
+requests-oauthlib==1.3.1
 soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.10.0
